<resources>
    <string name="app_name">Math Quiz</string>

    <!-- Header text of the quiz -->
    <string name="welcome">Welcome </string>

    <!-- Question 1-->
    <string name="question1">Question 1: </string>
    <!-- Question 2-->
    <string name="question2">Question 2: </string>
    <!-- Question 3-->
    <string name="question3">Question 3: </string>
    <!-- Question 4-->
    <string name="question4">Question 4: </string>
    <string name="intro">This quiz was designed to check your knowledge in some fields of Differential Calculus</string>
    <string name="head_q1">lim[(e^x-1)/sinx]what is the limit while x goes to 0;</string>
    <string name="head_q2">lim[(1-cosx)/(x^2)]what is the limit while x goes to 0;</string>
    <string name="head_q3">What are the conditions so the Rolle Theorem can be applied to fuction f;</string>
    <string name="head_q4">If f:D->R, the point z of D is local extreme and f is differentiable at z, then f\'(z)=0.</string>


</resources>
